manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microtodoui-svc
spec:
  type: ClusterIP
  selector:
    app: microtodoui
  ports:
    - port: 80
      targetPort: 80
