manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microtodoui-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: microtodoui.copcare.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: microtodoui-svc
            port: 
              number: 80
